--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <title>React App</title>
 
     <!-- ✅ Ajout de DOMPurify pour sécuriser et afficher le HTML dans le chatbot -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.3/dist/purify.min.js"></script>
   </head>
   <body>
