--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
     <!-- 🧠 Appel du widget vocal multi-client -->
     <script
-      src="%PUBLIC_URL%/ChatbotWidget.js"
+      src="%PUBLIC_URL%/ChatbotWidget.js?v=1.0.4"
       data-client-id="novacorp"
       data-backend-url="https://chatbot-vocal-backend.onrender.com">
     </script>
